@@ -7,6 +7,7 @@
 * #775 - avoid failed encodings / stop bad charsets early (grosser)
 * #849 - Handle calling Part#inline? when the Content-Disposition field couldn't be parsed (kjg)
 * #865 - Allow a body with an invalid encoding to be round tripped (kjg)
+* #868 - Use the Ruby19.charset_encoder when decoding message bodies (kjg)
 
 == Version 2.6.3 - Mon Nov 3 23:53 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>
 
